# RAG-Scorecard

./: .gitignore  =13.6.0  README.md  pyproject.toml  setup.py
rag_scorecard/: __init__.py  models.py
rag_scorecard/evaluators/: judge.py  metrics.py  tracker.py
